--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <h1>
-            Meal Deal Generator For Tesco
+            Meal Deal Generator For Morrisons
         </h1>
         <p> Press the button to deal your meal</p>
         <button onclick="fetchRandomItems()">Deal My Meal</button>
